gutter: selected state optimisation

https://bugzilla.gnome.org/show_bug.cgi?id=740883